Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
spec:
  selector:
    app: identity
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: basket-svc
spec:
  selector:
    app: basket
  ports:
    - protocol: TCP
      port: 80
